--- a/android/RSCHackathon/app/src/main/res/layout/activity_main.xml
+++ b/android/RSCHackathon/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -9,10 +10,38 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="com.rsc.rschackathon.MainActivity">
+        tools:context="com.rsc.rschackathon.activities.MainActivity">
 
-    <TextView
+    <ImageView
+            android:id="@+id/login_activity_login_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"/>
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="65dp"
+            app:srcCompat="@mipmap/ic_launcher"/>
+
+    <Button
+            android:id="@+id/login_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/login_activity_login_logo"
+            android:layout_marginTop="100dp"
+            android:text="Login"/>
+
+    <Button
+            android:id="@+id/register_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/login_button"
+            android:layout_marginTop="50dp"
+            android:text="Register"/>
+
+    <com.google.android.gms.common.SignInButton
+            android:id="@+id/google_button"
+            android:layout_width="wrap_content"
+            android:layout_alignTop="@id/register_button"
+            android:layout_marginTop="50dp"
+            android:layout_height="wrap_content"/>
+
 </RelativeLayout>
