Implement google login and facebook login

--- a/android/RSCHackathon/app/src/main/res/layout/activity_main.xml
+++ b/android/RSCHackathon/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:id="@+id/login_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@id/login_activity_login_logo"
+            android:layout_below="@id/login_activity_login_logo"
             android:layout_marginTop="100dp"
             android:text="Login"/>
 
@@ -33,15 +33,22 @@
             android:id="@+id/register_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@id/login_button"
-            android:layout_marginTop="50dp"
+            android:layout_below="@id/login_button"
+            android:layout_marginTop="10dp"
             android:text="Register"/>
 
     <com.google.android.gms.common.SignInButton
             android:id="@+id/google_button"
-            android:layout_width="wrap_content"
-            android:layout_alignTop="@id/register_button"
-            android:layout_marginTop="50dp"
-            android:layout_height="wrap_content"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/register_button"
+            android:layout_marginTop="10dp"/>
+
+    <com.facebook.login.widget.LoginButton
+            android:id="@+id/facebook_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/google_button"/>
 
 </RelativeLayout>
