--- a/android/RSCHackathon/app/src/main/res/layout/activity_recycler_view.xml
+++ b/android/RSCHackathon/app/src/main/res/layout/activity_recycler_view.xml
@@ -19,6 +19,7 @@
         android:scrollbars="none" />
 
     <android.support.design.widget.FloatingActionButton
+        android:visibility="gone"
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
