--- a/android/RSCHackathon/app/src/main/res/layout/fragment_view_pager_one_layout.xml
+++ b/android/RSCHackathon/app/src/main/res/layout/fragment_view_pager_one_layout.xml
@@ -3,4 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_of_items"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbarStyle="insideOverlay"
+        android:scrollbars="none" />
+
 </LinearLayout>
