--- a/android/RSCHackathon/app/src/main/res/layout/activity_view_pager.xml
+++ b/android/RSCHackathon/app/src/main/res/layout/activity_view_pager.xml
@@ -12,8 +12,8 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/white"
-        app:titleTextColor="@color/textColor"/>
+        android:background="@color/colorPrimary"
+        app:titleTextColor="@color/white"/>
 
     <RelativeLayout
         android:id="@+id/activity_main"
