--- a/android/RSCHackathon/app/src/main/res/layout/activity_recycler_view.xml
+++ b/android/RSCHackathon/app/src/main/res/layout/activity_recycler_view.xml
@@ -8,10 +8,21 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:clipToPadding="false"
     tools:context="com.rsc.rschackathon.activities.RecyclerViewActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:layout_marginLeft="-17dp"
+        android:layout_marginRight="-17dp"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:layout_alignParentTop="true"
+        app:titleTextColor="@color/white"/>
+
     <android.support.v7.widget.RecyclerView
+        android:layout_below="@id/toolbar"
         android:id="@+id/list_of_items"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
