--- a/android/RSCHackathon/app/src/main/res/menu/view_pager_menu.xml
+++ b/android/RSCHackathon/app/src/main/res/menu/view_pager_menu.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/search"
         android:title="@string/search"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_map"
         app:showAsAction="always"/>
 </menu>
