--- a/android/RSCHackathon/app/src/main/res/layout/activity_server_team.xml
+++ b/android/RSCHackathon/app/src/main/res/layout/activity_server_team.xml
@@ -2,14 +2,14 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/activity_team"
+        android:id="@+id/activity_join_team"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="com.rsc.rschackathon.activities.TeamActivity">
+        tools:context="com.rsc.rschackathon.activities.ServerTeamActivity">
 
 
     <EditText
@@ -25,9 +25,8 @@
     <android.support.v7.widget.RecyclerView
             android:id="@+id/team_list"
             android:layout_width="match_parent"
-            android:layout_below="@+id/info"
             android:layout_height="match_parent"
+            android:layout_below="@+id/info"
             android:scrollbarStyle="insideOverlay"
-            android:scrollbars="none" />
-
+            android:scrollbars="none"/>
 </RelativeLayout>
