--- a/android/RSCHackathon/app/src/main/res/layout/team_list_item.xml
+++ b/android/RSCHackathon/app/src/main/res/layout/team_list_item.xml
@@ -3,7 +3,7 @@
               android:id="@+id/team_list_layout"
               android:layout_width="match_parent"
               android:clickable="true"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:orientation="vertical">
 
     <TextView
