--- a/android/RSCHackathon/app/src/main/res/values/colors.xml
+++ b/android/RSCHackathon/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#9b9b9b</color>
-    <color name="colorPrimaryDark">#7c7c7c</color>
+    <color name="colorPrimary">#2196f3</color>
+    <color name="colorPrimaryDark">#1a78c2</color>
     <color name="colorAccent">#FF4081</color>
 
     <color name="white">#ffffff</color>
