--- a/android/RSCHackathon/app/src/main/res/values/colors.xml
+++ b/android/RSCHackathon/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#2196f3</color>
     <color name="colorPrimaryDark">#1a78c2</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#2196f3</color>
 
     <color name="white">#ffffff</color>
     <color name="red">#a22022</color>
