--- a/android/RSCHackathon/app/src/main/res/drawable/round_marker_background.xml
+++ b/android/RSCHackathon/app/src/main/res/drawable/round_marker_background.xml
@@ -2,7 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/white" />
-    <corners android:bottomRightRadius="24dp"
+    <corners
+        android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="24dp"
         android:topRightRadius="24dp"
+        android:topLeftRadius="10dp"
         />
 </shape>
