--- a/android/RSCHackathon/app/src/main/res/layout/activity_main.xml
+++ b/android/RSCHackathon/app/src/main/res/layout/activity_main.xml
@@ -10,45 +10,41 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
+        android:background="@drawable/login_bg"
         tools:context="com.rsc.rschackathon.activities.MainActivity">
 
     <ImageView
             android:id="@+id/login_activity_login_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="128dp"
+            android:layout_height="128dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="65dp"
-            app:srcCompat="@mipmap/ic_launcher"/>
+            app:srcCompat="@drawable/group"/>
 
     <Button
-            android:id="@+id/login_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/login_activity_login_logo"
-            android:layout_marginTop="100dp"
-            android:text="Login"/>
-
-    <Button
-            android:id="@+id/register_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/login_button"
-            android:layout_marginTop="10dp"
-            android:text="Register"/>
-
-    <com.google.android.gms.common.SignInButton
             android:id="@+id/google_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/register_button"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginLeft="18dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="18dp"
+            android:layout_below="@+id/facebook_button"
+            android:background="@drawable/button"/>
 
     <com.facebook.login.widget.LoginButton
+            xmlns:facebook="http://schemas.android.com/apk/res-auto"
             android:id="@+id/facebook_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/google_button"/>
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="100dp"
+            android:layout_alignParentStart="true"
+            facebook:com_facebook_login_text="Sign in with Facebook"
+            android:textSize="15sp"
+            android:layout_below="@+id/login_activity_login_logo"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"/>
 
 </RelativeLayout>
