--- a/android/RSCHackathon/app/src/main/res/layout/team_list_item.xml
+++ b/android/RSCHackathon/app/src/main/res/layout/team_list_item.xml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/team_list_layout"
-              android:layout_width="match_parent"
-              android:clickable="true"
-              android:layout_height="wrap_content"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/team_list_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true">
 
     <TextView
             android:id="@+id/team_mate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/user_profile_icon"
+            android:layout_alignBottom="@+id/user_profile_icon"
             android:text="TextView"
-            android:textSize="30sp"/>
-</LinearLayout>
+            android:textSize="30sp"
+            android:gravity="center_vertical"/>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/user_profile_icon"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"/>
+</RelativeLayout>
