--- a/android/RSCHackathon/app/src/main/res/values/styles.xml
+++ b/android/RSCHackathon/app/src/main/res/values/styles.xml
@@ -18,4 +18,10 @@
         <item name="android:textColorSecondary">@android:color/white</item>
     </style>
 
+    <style name="FacebookLoginButton">
+        <item name="android:height">40dp</item>
+        <item name="android:drawable">@drawable/rectangle_43_sign_in_with_google_shape_copy_2</item>
+    </style>
+
+
 </resources>
