SHaker and highscore

--- a/android/RSCHackathon/app/src/main/res/layout/high_score_item.xml
+++ b/android/RSCHackathon/app/src/main/res/layout/high_score_item.xml
@@ -12,6 +12,7 @@
         tools:src="@drawable/gold" />
 
     <TextView
+        android:id="@+id/text_position"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="6dp"
