--- a/android/RSCHackathon/app/src/main/res/layout/activity_main.xml
+++ b/android/RSCHackathon/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,17 @@
             android:layout_marginTop="65dp"
             app:srcCompat="@drawable/group"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="48sp"
+        android:layout_below="@+id/login_activity_login_logo"
+        android:text="Pubuzz"
+        android:textAlignment="center"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/white"
+        />
+
     <Button
             android:id="@+id/google_button"
             android:layout_width="match_parent"
