--- a/android/RSCHackathon/app/src/main/res/layout/activity_main.xml
+++ b/android/RSCHackathon/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
             android:layout_marginTop="100dp"
             android:layout_alignParentStart="true"
             facebook:com_facebook_login_text="Sign in with Facebook"
+            facebook:com_facebook_logout_text = "Sign in with Facebook"
             android:textSize="15sp"
             android:layout_below="@+id/login_activity_login_logo"
             android:paddingBottom="10dp"
