--- a/android/RSCHackathon/app/src/main/res/layout/activity_main.xml
+++ b/android/RSCHackathon/app/src/main/res/layout/activity_main.xml
@@ -23,15 +23,15 @@
             app:srcCompat="@drawable/group"/>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="48sp"
-        android:layout_below="@+id/login_activity_login_logo"
-        android:text="Pubuzz"
-        android:textAlignment="center"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/white"
-        />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/login_activity_login_logo"
+            android:layout_marginTop="10dp"
+            android:textSize="48sp"
+            android:text="Pubuzz"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            />
 
     <Button
             android:id="@+id/google_button"
@@ -52,11 +52,12 @@
             android:layout_marginRight="20dp"
             android:layout_marginTop="100dp"
             android:layout_alignParentStart="true"
-            facebook:com_facebook_login_text="Sign in with Facebook"
-            facebook:com_facebook_logout_text = "Sign in with Facebook"
-            android:textSize="15sp"
             android:layout_below="@+id/login_activity_login_logo"
+            android:textSize="15sp"
             android:paddingBottom="10dp"
-            android:paddingTop="10dp"/>
+            android:paddingTop="10dp"
+            facebook:com_facebook_login_text="Sign in with Facebook"
+            facebook:com_facebook_logout_text="Sign in with Facebook"/>
+
 
 </RelativeLayout>
